--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/liste, roles: ROLE_ADMIN }
+         - { path: ^/insertMarque, roles: ROLE_USER } 
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
